--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@types/node": "^24.2.1",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
+    "compression-webpack-plugin": "^11.1.0",
     "drizzle-kit": "^0.31.4",
     "eslint": "^9.33.0",
     "eslint-config-next": "15.4.6",
